lecture 31 of august changes, Mer CSS lecture

--- a/html/index.html
+++ b/html/index.html
@@ -6,15 +6,34 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
+        <div class="tooltip-container">
+            <i class="fa fa-question"></i>
+            <p>Här har vi vårat första tooltip!</p>
+        </div>
+        <div class="landing-image-container">
+            <img src="../img/partha-narasimhan-EHs_-3H41YM-unsplash.jpg"
+                 alt="background image" 
+                 class="landing-image"
+            >
+            <div class="landing-image-overlay">
+                <h1>Välkommen till siten!</h1>
+            </div>
+        </div>
         <div class="navbar">
-            <a href="index.html">Hem</a>
-            <a href="recepies.html">Recept</a>
-            <a href="books.html">Kokböcker</a>
+            <h3>Christian recept</h3>
+            <ul>
+                <li><a href="index.html">Hem</a></li>
+                <li><a href="recepies.html">Recept</a></li>
+                <li><a href="books.html">Kokböcker</a></li>
+            </ul>   
         </div>
         <div class="main-container">
             <h1><span>H</span>em</h1>
             <div class="content-container">
-                <img src="../img/20698-7-mario-transparent-background.png" alt="Super Mario" width="250">
+                <img src="../img/20698-7-mario-transparent-background.png" 
+                    alt="Super Mario" 
+                    width="250"
+                >
                 <div class="text-container">
                     <h2>
                         <span>
@@ -32,6 +51,48 @@
                         laboris nisi ut aliquip ex ea commodo consequat
                     </p>
                 </div>
+            </div>
+            <div class="content-container fixed-height-wrapper">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                        sed do eiusmod tempor incididunt ut labore 
+                        et dolore magna aliqua. Ut enim ad minim 
+                        veniam, quis nostrud exercitation ullamco 
+                        laboris nisi ut aliquip ex ea commodo consequatLorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                        sed do eiusmod tempor incididunt ut labore 
+                        et dolore magna aliqua. Ut enim ad minim 
+                        veniam, quis nostrud exercitation ullamco 
+                        laboris nisi ut aliquip ex ea commodo consequatLorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                        sed do eiusmod tempor incididunt ut labore 
+                        et dolore magna aliqua. Ut enim ad minim 
+                        veniam, quis nostrud exercitation ullamco 
+                        laboris nisi ut aliquip ex ea commodo consequatLorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                        sed do eiusmod tempor incididunt ut labore 
+                        et dolore magna aliqua. Ut enim ad minim 
+                        veniam, quis nostrud exercitation ullamco 
+                        laboris nisi ut aliquip ex ea commodo consequatLorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                        sed do eiusmod tempor incididunt ut labore 
+                        et dolore magna aliqua. Ut enim ad minim 
+                        veniam, quis nostrud exercitation ullamco 
+                        laboris nisi ut aliquip ex ea commodo consequat
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                        sed do eiusmod tempor incididunt ut labore 
+                        et dolore magna aliqua. Ut enim ad minim 
+                        veniam, quis nostrud exercitation ullamco 
+                        laboris nisi ut aliquip ex ea commodo consequatLorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                        sed do eiusmod tempor incididunt ut labore 
+                        et dolore magna aliqua. Ut enim ad minim 
+                        veniam, quis nostrud exercitation ullamco 
+                        laboris nisi ut aliquip ex ea commodo consequatLorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                        sed do eiusmod tempor incididunt ut labore 
+                        et dolore magna aliqua. Ut enim ad minim 
+                        veniam, quis nostrud exercitation ullamco 
+                        laboris nisi ut aliquip ex ea commodo consequatLorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                        sed do eiusmod tempor incididunt ut labore 
+                        et dolore magna aliqua. Ut enim ad minim 
+                        veniam, quis nostrud exercitation ullamco 
+                        laboris nisi ut aliquip ex ea commodo consequat
+                </p>
             </div>
         </div>
     </body>
