--- a/html/recepies.html
+++ b/html/recepies.html
@@ -6,9 +6,12 @@
     </head>
     <body>
         <div class="navbar">
-            <a href="index.html">Hem</a>
-            <a href="recepies.html">Recept</a>
-            <a href="books.html">Kokböcker</a>
+            <h3>Christian recept</h3>
+            <ul>
+                <li><a href="index.html">Hem</a></li>
+                <li><a href="recepies.html">Recept</a></li>
+                <li><a href="books.html">Kokböcker</a></li>
+            </ul>   
         </div>
         <div class="main-container">
             <h1><span>M</span>ina recept</h1>
