--- a/html/books.html
+++ b/html/books.html
@@ -6,9 +6,12 @@
     </head>
     <body>
         <div class="navbar">
-            <a href="index.html">Hem</a>
-            <a href="recepies.html">Recept</a>
-            <a href="books.html">Kokböcker</a>
+            <h3>Christian recept</h3>
+            <ul>
+                <li><a href="index.html">Hem</a></li>
+                <li><a href="recepies.html">Recept</a></li>
+                <li><a href="books.html">Kokböcker</a></li>
+            </ul>   
         </div>
         <div class="main-container">
             <h1><span>M</span>ina kokböcker</h1>
@@ -34,6 +37,24 @@
                     </tr>
                     <tr>
                         <td>Pizzaboken</td>
+                        <td>Italienska</td>
+                        <td>Super Mario</td>
+                        <td class="center-year">1994</td>
+                    </tr>
+                    <tr>
+                        <td>Chipsboken</td>
+                        <td>Amerikanska</td>
+                        <td>Guy Fieri</td>
+                        <td class="center-year">1994</td>
+                    </tr>
+                    <tr>
+                        <td>Godishavet</td>
+                        <td>Svenska</td>
+                        <td>Astrid Lindgren</td>
+                        <td class="center-year">1994</td>
+                    </tr>
+                    <tr>
+                        <td>Pizzaboken 2</td>
                         <td>Italienska</td>
                         <td>Super Mario</td>
                         <td class="center-year">1994</td>
